# TimeCapsule

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HelloTimeByClaude.sln  README.md  frontend-links.html
.claude/: settings.local.json
backends/aspnet-core/: Program.cs  README.md  appsettings.json  aspnet-core.csproj  dotnetw  run  run.ps1
backends/axum/: Cargo.toml  README.md  run  run.ps1
backends/axum/src/: lib.rs  main.rs
backends/axum/tests/: backend_tests.rs
backends/drogon/: CMakeLists.txt  README.md  run  run.ps1
backends/drogon/src/: main.cc  server.cc  server.h
backends/drogon/tests/: backend_tests.cc
backends/elysia/: README.md  bun.lockb  bunfig.toml  package-lock.json  package.json  run  run.ps1  tsconfig.json
backends/fastapi/: README.md  requirements.txt  run  run.ps1
backends/gin/: README.md  go.mod  main.go  run  run.ps1
backends/ktor/: .gitignore  README.md  build.gradle.kts  run  run.ps1  settings.gradle.kts
backends/nest/: README.md  jest.config.js  package-lock.json  package.json  run  run.ps1  tsconfig.build.json  tsconfig.json
backends/spring-boot/: README.md  pom.xml  run  run.ps1
backends/vapor/: README.md  run  run.ps1
data/: hellotime.db-shm  hellotime.db-wal
desktop/flutter_desktop/: README.md  pubspec.yaml  run.ps1  test.ps1
desktop/macos-swiftui/: Package.swift  README.md  run  run.ps1
desktop/tauri/: README.md  package-lock.json  package.json  run  run.ps1  tsconfig.json  vite.config.ts
desktop/winui3/: App.xaml  App.xaml.cs  HelloTimeWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  RootView.xaml  RootView.xaml.cs  app.manifest  run.ps1
docs/: REQUIREMENTS.md  api-spec.md  architecture-demo-principles.md  backend-comparison.md  comment-guidelines.md  database-schema.md  deployment.md  design-tokens.md  frontend-comparison.md  frontend-implementations-comparison.md  fullstack-comparison.md  multi-stack-reading-guide.md  platform-roadmap.md  tech-stack-display.md
docs/guides/: angular-guide.md  frontend-guide-template.md  react-ts-guide.md  solid-guide.md  svelte-guide.md  vue3-guide.md
scripts/: build.sh  dev-manager-web.html  dev-manager.py  dev.sh  port_forward.py  proxy_paths.py  switch-backend.ps1  switch-backend.sh  test.sh
verification/: README.md  matrix.md  package-lock.json  package.json  playwright.config.js
(+874 files in other folders)
