[package]
name = "hellotime-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
http = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
